--- a/.config
+++ b/.config
@@ -18,6 +18,22 @@ CONFIG_PACKAGE_ca-bundle=y
 
 CONFIG_PACKAGE_hd-idle=y
 
+CONFIG_DEFAULT_luci-app-ddns=y
+CONFIG_DEFAULT_ddns-scripts_dnspod=y
+CONFIG_DEFAULT_ddns-scripts_aliyun=y
+
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+CONFIG_PACKAGE_ddns-scripts_dnspod=y
+CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
+CONFIG_PACKAGE_ddns-scripts_nsupdate=y
+CONFIG_PACKAGE_ddns-scripts_route53-v1=y
+
 CONFIG_PACKAGE_ip6tables=y
 
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
