--- a/.config
+++ b/.config
@@ -1,193 +1,102 @@
 CONFIG_TARGET_ath79=y
-
 CONFIG_TARGET_ath79_generic=y
-
 CONFIG_TARGET_ath79_generic_DEVICE_netgear_wndr3800=y
-
-CONFIG_LIBSODIUM_MINIMAL=y
-
+CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_FILE=y
+CONFIG_LIBCURL_FTP=y
+CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_OPENSSL=y
+CONFIG_LIBCURL_PROXY=y
 CONFIG_PACKAGE_6in4=y
-
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
-
 CONFIG_PACKAGE_antfs-mount=y
-
 CONFIG_PACKAGE_automount=y
-
+CONFIG_PACKAGE_bind-client=y
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_ca-bundle=y
-
-CONFIG_PACKAGE_hd-idle=y
-
-CONFIG_DEFAULT_luci-app-ddns=y
-
-CONFIG_DEFAULT_ddns-scripts_dnspod=y
-
-CONFIG_DEFAULT_ddns-scripts_aliyun=y
-
-# CONFIG_PACKAGE_luci-app-ddns is not set
-
-# CONFIG_PACKAGE_luci-i18n-ddns-zh-cn is not set
-
-# CONFIG_PACKAGE_ddns-scripts is not set
-
-# CONFIG_PACKAGE_ddns-scripts_aliyun is not set
-
-# CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4 is not set
-
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+# CONFIG_PACKAGE_ddns-scripts_dnspod is not set
 # CONFIG_PACKAGE_ddns-scripts_freedns_42_pl is not set
-
-
+# CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1 is not set
+# CONFIG_PACKAGE_ddns-scripts_no-ip_com is not set
+# CONFIG_PACKAGE_ddns-scripts_nsupdate is not set
+# CONFIG_PACKAGE_ddns-scripts_route53-v1 is not set
+CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_ip6tables=y
-
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-
 CONFIG_PACKAGE_iptables-mod-ipopt=y
-
 CONFIG_PACKAGE_ipv6helper=y
-
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
-
 CONFIG_PACKAGE_kmod-fs-antfs=y
-
 CONFIG_PACKAGE_kmod-fs-exfat=y
-
 CONFIG_PACKAGE_kmod-fs-ext4=y
-
 CONFIG_PACKAGE_kmod-fs-vfat=y
-
 CONFIG_PACKAGE_kmod-ifb=y
-
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
-
 CONFIG_PACKAGE_kmod-ipt-nat6=y
-
 CONFIG_PACKAGE_kmod-iptunnel=y
-
 CONFIG_PACKAGE_kmod-iptunnel4=y
-
 CONFIG_PACKAGE_kmod-lib-crc16=y
-
 # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-
 CONFIG_PACKAGE_kmod-nf-nat6=y
-
 CONFIG_PACKAGE_kmod-nls-cp437=y
-
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-
 CONFIG_PACKAGE_kmod-nls-utf8=y
-
 CONFIG_PACKAGE_kmod-sched-cake=y
-
-CONFIG_PACKAGE_kmod-sched-cake-virtual=y
-
 CONFIG_PACKAGE_kmod-sched-core=y
-
 CONFIG_PACKAGE_kmod-scsi-core=y
-
 CONFIG_PACKAGE_kmod-sit=y
-
 CONFIG_PACKAGE_kmod-tun=y
-
 CONFIG_PACKAGE_kmod-usb-storage=y
-
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
-
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
-
+CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
-
-CONFIG_PACKAGE_libev=y
-
+CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libmbedtls=y
-
 CONFIG_PACKAGE_libminiupnpc=y
-
 CONFIG_PACKAGE_libnatpmp=y
-
-CONFIG_PACKAGE_libsodium=y
-
+CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libstdcpp=y
-
+CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-
 # CONFIG_PACKAGE_luci-app-autoreboot is not set
-
-CONFIG_PACKAGE_luci-app-eqos=y
-
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
-
 CONFIG_PACKAGE_luci-app-hd-idle=y
-
 CONFIG_PACKAGE_luci-app-mwan3=y
-
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-
 # CONFIG_PACKAGE_luci-app-ramfree is not set
-
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-
 CONFIG_PACKAGE_luci-app-samba=y
-
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-
-# CONFIG_PACKAGE_luci-app-syncdial=y
-
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-
 CONFIG_PACKAGE_luci-app-zerotier=y
-
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
-
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-
 CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
-
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
-
 # CONFIG_PACKAGE_luci-lib-fs is not set
-
 CONFIG_PACKAGE_luci-proto-ipv6=y
-
 CONFIG_PACKAGE_mwan3=y
-
 # CONFIG_PACKAGE_nlbwmon is not set
-
 CONFIG_PACKAGE_odhcp6c=y
-
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-
 CONFIG_PACKAGE_odhcpd-ipv6only=y
-
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-
+CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_samba36-server=y
-
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-
-CONFIG_PACKAGE_shadowsocksr-libev-server=y
-
-CONFIG_PACKAGE_simple-obfs=y
-
 CONFIG_PACKAGE_sqm-scripts=y
-
-CONFIG_PACKAGE_tc=y
-
+CONFIG_PACKAGE_tc-mod-iptables=y
+CONFIG_PACKAGE_tc-tiny=y
+CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_xray-core=y
-
 CONFIG_PACKAGE_zerotier=y
-
 CONFIG_XRAY_CORE_COMPRESS_UPX=y
-
