--- a/.github/workflows/3800.yml
+++ b/.github/workflows/3800.yml
@@ -19,6 +19,9 @@ on:
         required: false
         default: 'false'
 
+  schedule:
+    - cron: 0 6 * * *
+
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
