--- a/.github/workflows/3800.yml
+++ b/.github/workflows/3800.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
   schedule:
-    - cron: 30 20 * * *
+    - cron: 0 0 * * 0
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
